# secret-kvk-tool-dont-make-public-yet

./: .gitignore  Kovaaks_Tool.py  ProfileChangeHandlerTest.py  README.md  Scenario_folder_location.txt  compile.bat  palette_file_location.txt  playlist_folder_location.txt  playlist_scenario_downloader.py  presets.py  pyproject.toml  requirements.txt  ruff.toml  setup.bat  taskfile.yml  workshop_id.txt
scripts/: build.py
src/: Autoclipping.py  Kovaaks_Tool.py  ProfileChangeHandlerTest.py  playlist_scenario_downloader.py  presets.py
the exe/: Autoclipping.py  playlist_scenario_downloader.py  presets.py
